--- a/templates/level.html
+++ b/templates/level.html
@@ -4,7 +4,7 @@
 
 {%block headerTitle%} 
   <div class="container text-center">
-    <h1 class="my-4 fw-bold">JEU DE PENDU</h1>
+    <h1 class="my-4 fw-bold text-white">JEU DE PENDU</h1>
   </div>
 {% endblock %}
 
@@ -38,7 +38,7 @@
 
 {%block bodyContent%}
 <div class="container text-center">
-  <h1 class="my-5">Choose Your Level</h1>
+  <h1 class="my-5 text-white">Choose Your Level</h1>
   <div class="d-flex mt-5 align-items-center justify-content-center">
     <div class="level_items mx-3">
       <a href="debutant/"  class="text-decoration-none">
