--- a/templates/theam.html
+++ b/templates/theam.html
@@ -40,32 +40,40 @@
 <div class="container">
   <h3 class="text-center fw-bold text-white">Choose One theam</h3>
   <div class="row">
+    {% for key in id.list_pendu %}
     <div class="col-md-5 col-lg-5 mx-auto text-center my-3">
-      <a href="voiture/" class="text-decoration-none">
-        <h4 class="title text-white fw-bold">Voiture</h4>
-        <div class="image">
-          <img src="/static/image/skeleton-5749900_1920.webp" class="img-fluid rounded" alt="" style="width: 100%; height: 100%; object-fit: cover;">
+      <a href="{{key}}/" class="text-decoration-none">
+        <h4 class="title text-white fw-bold">{{ key }}</h4>
+        <div class="image" style="height: 30vh;">
+          {% if key == 'sport' %}
+          <img src="{{ list_img.0 }}" class="img-fluid rounded" alt="" style="width: 100%; height: 100%; object-fit: cover;">
+          {% elif key == 'voiture' %}
+            <img src="{{ list_img.1 }}" class="img-fluid rounded" alt="" style="width: 100%; height: 100%; object-fit: cover;">
+          {% else %}
+            <img src="{{ list_img.2 }}" class="img-fluid rounded" alt="" style="width: 100%; height: 100%; object-fit: cover;">
+          {%endif %}
         </div>
-      </a>
+      </a>   
     </div>
+    {% endfor %}
 
-    <div class="col-md-5 col-lg-5 mx-auto text-center my-3">
+    <!-- <div class="col-md-5 col-lg-5 mx-auto text-center my-3">
       <a href="sport/" class="text-decoration-none">
-        <h4 class="title text-white fw-bold">Sport</h4>
+        <h4 class="title text-white fw-bold">{{ key }}</h4>
         <div class="image">
           <img src="/static/image/images.jpeg" style="width: 100%; height: 100%; object-fit: cover;" class="img-fluid rounded border-3 border-white" alt="">
         </div>
       </a>
-    </div>
+    </div> -->
 
-    <div class="col-md-6 mx-auto text-center my-3">
+    <!-- <div class="col-md-6 mx-auto text-center my-3">
       <a href="country/" class="text-decoration-none">
-        <h4 class="title text-white fw-bold">Country</h4>
+        <h4 class="title text-white fw-bold">{{ key}}</h4>
         <div class="image">
           <img src="/static/image/hangman.jpeg" class="img-fluid rounded" alt="" >
         </div>
       </a>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="container">
