--- a/templates/play.html
+++ b/templates/play.html
@@ -61,6 +61,9 @@
           <div class="col-12 d-flex flex-row flex-wrap justify-content-center">
             {% for word in letter %}
             <div class="letter mx-2 p-0 my-3 d-flex flex-wrap">
+              <!-- <a href="" class="d-flex flex-wrap text-decoration-none p-0 letter">
+                <button class="fs-3 semi-bold bg-dark text-white border-0  p-2 rounded-circle w-100 h-100 text-center" onclick="myClick()">{{ word }}</button>
+              </a> -->
               <button class="fs-3 semi-bold bg-dark text-white border-0  p-2 rounded-circle w-100 h-100 text-center">{{ word }}</button>
             </div>
             {% endfor %}
